2004-07-02  Zoltan Varga  <vargaz@freemail.hu>

	* man/mono.1: Added 'aot' to trace options.

2004-06-30  Zoltan Varga  <vargaz@freemail.hu>

	* configure.in: Fix trunc check + add SPARC64 defines.

2004-06-29  Jackson Harper  <jackson@ximian.com>

	* man/gacutil.1: Update man with new command line options.
	
2004-06-29  Raja R Harinath  <rharinath@novell.com>
            Atsushi Enomoto  <atsushi@ximian.com>

	* runtime/net_1_1/Makefile.am (GAC_ROOT_DIR): Renamed from GAC_DIR.
	(GAC_DIR): New define that doesn't include $(DESTDIR).
	(install-data-local,uninstall-local): Use them.  Use in-tree mono
	runtime, not the installed one.

2004-06-29  Raja R Harinath  <rharinath@novell.com>

	* runtime/Makefile.am (gmcs_exe): New.  Set only if not W32.
	(monotwo_DATA): Use it.
	From Atsushi Enomoto.

2004-06-24  Raja R Harinath  <rharinath@novell.com>

	* runtime/net_2_0/Makefile.am (gac_assemblies_list): Put back
	ICSharpCode.SharpZipLib, not that it has a different version.

2004-06-24  Raja R Harinath  <rharinath@novell.com>

	* Makefile.am (MCS_DIRS, MCS_FILES): Add back Mono.CSharp.Debugger.
	(tmpinst-dir-contents, $(tmpinst)/bin/mono.bat): Remove mono.bat
	in W32.  Use 'mono' and 'mcs' in W32 too.
	(bootstrap) [PLATFORM_WIN32]: Back to single stage bootstrap.
	* runtime/net_2_0/Makefile.am (gac_assemblies_list): Don't mention
	nunit.*, IBM.Data.DB2, ICSharpCode.SharpZipLib.
	Fix for #60443, the GAC .DLL-Hell.

2004-06-22  Raja R Harinath  <rharinath@novell.com>

	* Makefile.am (bootstrap) [PLATFORM_WIN32]: Make two-stage.

2004-06-18  Jackson Harper  <jackson@ximian.com>

	* man/mono.1: Add MONO_LOG_LEVEL and MONO_LOG_MASK. Add
	instructions on setting multiple mask values.
		
Fri Jun 18 19:39:09 CEST 2004 Paolo Molaro <lupus@ximian.com>

	* Makefile.am: process data before runtime, so the config file is
	installed and gacutil has a chance to work (finding symlink).

2004-06-18  Raja R Harinath  <rharinath@novell.com>
